@@ -39,6 +39,7 @@ Sven Geggus <sts@fuchsschwanzdomain.de>
 Steve Wolf <stevewolf6@gmail.com>
 Brecht Sanders <brecht@sanders.org>
 Jan Janak <jan@janakj.org>
+Matthew Mundell <matthew.mundell@greenbone.net>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
